2004-07-07 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: removed unused commands, unified setting status code
	and message into one single command. Now apache handles closing the
	socket used to connect to mod-mono-server and waiting, terminating or
	killing the forked process when the configuration is reloaded or apache
	is shut down. When we get several request, don't fork more than once.

2004-07-06 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* COPYING:
	* src/ApacheApplicationHost.cs:
	* src/ApacheWorkerRequest.cs:
	* src/IApplicationHost.cs:
	* src/MonoWorkerRequest.cs:
	* src/Request.cs:
	* src/mod_mono.c:
	* src/mod_mono_old.c: relicensed under apache license version 2.0.
	Agreed with Daniel.

2004-06-30 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Released 1.0

2004-06-12 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* INSTALL:
	* configure.in:
	* src/Makefile.am:
	* src/mod_mono.c: added --with-mono-prefix configure option so that
	if mod_mono is installed in a different prefix from mono, the default
	paths for locating mono and mod-mono-server.exe are right.

2004-06-12 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: fixed a couple of big-endian issues.

2004-06-11  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: check for endian-ness.
	* src/mod_mono.c: all the integers that are read/written from/to the
	socket are swapped if the module is running in a big endian system.

2004-06-03  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* man/mod_mono.8.in: 
	* INSTALL: added .webapp sample. MonoApplications is not mandatory.

	* src/mod_mono.c: at least one of MonoApplications,
	MonoApplicationsConfigFile and MonoApplicationsConfigDir is mandatory.

2004-06-02  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: check for setenv and putenv.
	* src/mod_mono.c: use putenv when setenv is not available. Fixes build
	problem under Solaris 8.
